feat(samples): adding delete endpoint
