# cmd/api/main.go
@@ -50,6 +50,7 @@ func main() {
 
 	mux.HandleFunc("POST /samples", controller.Create)
 	mux.HandleFunc("GET /samples", controller.GetAll)
+	mux.HandleFunc("DELETE /samples/{id}", controller.DeleteById)
 
 	mux.HandleFunc("GET /swagger/", httpSwagger.WrapHandler)
 
